Override link colors for callout sections so there aren't contrast issues with the theme.
RELNOTES=n/a

-------------
Created by MOE: https://github.com/google/moe
MOE_MIGRATED_REVID=314203830

--- a/_sass/components/_callouts.scss
+++ b/_sass/components/_callouts.scss
@@ -22,10 +22,18 @@
   color: #0277bd;
   background-color: #e1f5fe;
   padding: 1rem 2rem;
+
+  a {
+    color: #024369
+  }
 }
 
 .c-callouts__warning {
   color: #a52714;
   background-color: #fbe9e7;
   padding: 1rem 2rem;
+
+  a {
+    color: #731c0d
+  }
 }
